# weekly-commits

./: .gitignore  Cargo.toml  Justfile  LICENSE  README.md
res/: io.github.JaredTweed.WeeklyCommits.desktop  io.github.JaredTweed.WeeklyCommits.metainfo.xml
src/: main.rs  settings.rs  weekly.rs
